Partner with us page added

--- a/src/best-sellers.html
+++ b/src/best-sellers.html
@@ -1,52 +1,32 @@
-<include src="src/layouts/head.html" locals='{"pageTitle": "Stores Directory"}'>
+<include src="src/layouts/head.html" locals='{"pageTitle": "Best Sellers | Stores"}'>
 </include>
 
-<section class="sub-page-header-section pink-bg">
+<section class="sub-page-header-section img-bg">
     <include src="src/layouts/main-header.html"></include>
-    <div class="container text-center">
-        <h1 class="font-weight-bold mp-text-dark-blue mb-4">Shop Now with Mintpay.</h1>
-        <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus, in.</h4>
+
+    <div class="bg-img-wrapper">
+        <img src="assets/img/best-sellers-bg.jpg" alt="">
+    </div>
+
+    <div class="bg-img-text-block container text-center">
+        <h1 class="font-weight-bold mb-4">Best Sellers</h1>
+        <h4 class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, ratione explicabo officiis quae
+            minus
+            optio dolores labore hic soluta assumenda, impedit autem quibusdam debitis? Perspiciatis ut nobis
+            quasi incidunt quidem.</h4>
+        <button class="mp-btn">Store directory</button>
     </div>
 </section>
 
 <section class="stores-section">
 
-    <div class="filter-block d-flex justify-content-center px-3 px-md-5">
-        <div class="filter-block__slider">
-            <div>
-                <div class="filter-block__slider__item">Best sellers</div>
-            </div>
-            <div>
-                <div class="filter-block__slider__item">Women</div>
-            </div>
-            <div>
-                <div class="filter-block__slider__item">Men</div>
-            </div>
-            <div>
-                <div class="filter-block__slider__item">Beauty</div>
-            </div>
-            <div>
-                <div class="filter-block__slider__item">Jewelry &amp; Accessories</div>
-            </div>
-            <div>
-                <div class="filter-block__slider__item">Miscellaneous</div>
-            </div>
-        </div>
-    </div>
-
     <div class="category-block">
-        <div class="container">
-            <div class="category-block__title">Best Sellers</div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, ratione explicabo officiis quae minus
-                optio dolores labore hic soluta assumenda, impedit autem quibusdam debitis? Perspiciatis ut nobis
-                quasi incidunt quidem?</p>
-        </div>
 
-        <div class="continer-fluid mt-5">
+        <div class="content-wrapper mt-5">
             <div class="mobile-view-more d-flex d-xl-none justify-content-end px-4">
-                <a href="best-sellers.html">view more <i class="fi-sr-arrow-right ps-2"></i></a>
+                <a href="#">view more <i class="fi-sr-arrow-right ps-2"></i></a>
             </div>
-            <div class="store-block">
+            <div class="store-block store-block--grid">
                 <div class="store-block__item">
                     <div class="store-img position-relative">
                         <img src="assets/img/stores/zigzag.jpg" alt="">
@@ -87,23 +67,36 @@
                     <h5 class="store-title mt-3">Stripes & Checks Inc</h5>
                 </div>
 
-                <div class="store-block__item view-more d-none d-xl-block">
-                    <div class="store-img view-more-block position-relative">
+                <div class="store-block__item">
+                    <div class="store-img position-relative">
+                        <img src="assets/img/stores/ekko.jpg" alt="">
                         <div class="store-link">
-                            <a href="best-sellers.html">View more</a>
+                            <a href="https://www.ekko.style/" target="_blank">View store</a>
                         </div>
                     </div>
+                    <h5 class="store-title mt-3">Ekko</h5>
+                </div>
+
+                <div class="store-block__item">
+                    <div class="store-img position-relative">
+                        <img src="assets/img/stores/glitteray.jpg" alt="">
+                        <div class="store-link">
+                            <a href="https://www.glitterayjewellery.com/" target="_blank">View store</a>
+                        </div>
+                    </div>
+                    <h5 class="store-title mt-3">Glitteray</h5>
+                </div>
+
+                <div class="store-block__item">
+                    <div class="store-img position-relative">
+                        <img src="assets/img/stores/iris-garden.jpg" alt="">
+                        <div class="store-link">
+                            <a href="https://irisgarden.lk//" target="_blank">View store</a>
+                        </div>
+                    </div>
+                    <h5 class="store-title mt-3">Iris Garden</h5>
                 </div>
             </div>
-        </div>
-    </div>
-
-    <div class="category-block">
-        <div class="container">
-            <div class="category-block__title">Women</div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, ratione explicabo officiis quae minus
-                optio dolores labore hic soluta assumenda, impedit autem quibusdam debitis? Perspiciatis ut nobis
-                quasi incidunt quidem?</p>
         </div>
     </div>
 </section>
