Final UI developments

--- a/src/stores.html
+++ b/src/stores.html
@@ -43,7 +43,7 @@
         </div>
 
         <div class="continer-fluid mt-5">
-            <div class="mobile-view-more d-flex d-xl-none justify-content-end px-4">
+            <div class="mobile-view-more d-flex justify-content-end px-4">
                 <a href="best-sellers.html">view more <i class="fi-sr-arrow-right ps-2"></i></a>
             </div>
             <div class="store-block">
@@ -85,14 +85,6 @@
                         </div>
                     </div>
                     <h5 class="store-title mt-3">Stripes & Checks Inc</h5>
-                </div>
-
-                <div class="store-block__item view-more d-none d-xl-block">
-                    <div class="store-img view-more-block position-relative">
-                        <div class="store-link">
-                            <a href="best-sellers.html">View more</a>
-                        </div>
-                    </div>
                 </div>
             </div>
         </div>
