--- a/src/index.html
+++ b/src/index.html
@@ -44,8 +44,12 @@
                 </div>
             </div>
         </div>
+        <div class="d-none d-lg-flex justify-content-center w-100">
+            <div class="icon-scroll" aria-hidden="true"></div>
+        </div>
     </div>
 
+    
 </section>
 
 <section class="how-it-works-section">
