--- a/src/partner-with-us.html
+++ b/src/partner-with-us.html
@@ -66,7 +66,7 @@
     </div>
 </section>
 
-<div class="integration-section">
+<section class="integration-section">
     <div class="container">
         <div class="text-center">
             <h2 class="font-weight-semibold mb-4">Seamlessly integrate with your store</h2>
@@ -81,6 +81,55 @@
             <img class="mb-5" src="assets/img/prestashop.svg" alt="">
         </div>
     </div>
-</div>
+</section>
+
+<section class="partner-form-section">
+    <div class="container">
+        <h2 class="text-light  mb-4 font-weight-semibold text-center">Write to us</h2>
+        <h4 class="text-light text-center">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsum non
+            voluptatum ratione eum tempore nesciunt a animi porro! Libero, doloremque.</h4>
+        <form class="mp-form row my-5" action="">
+            <div class="col-12 col-lg-6 mb-4">
+                <div class="mp-form-group">
+                    <label class="mp-form-group__label">Company name</label>
+                    <input type="text" name="" id="" placeholder="ABC wardrobe">
+                </div>
+            </div>
+            <div class="col-12 col-lg-6 mb-4">
+                <div class="mp-form-group">
+                    <label class="mp-form-group__label">Company URL</label>
+                    <input type="text" name="" id="" placeholder="www.abcwardrobe.lk">
+                </div>
+            </div>
+            <div class="col-12 col-lg-4 mb-4">
+                <div class="mp-form-group">
+                    <label class="mp-form-group__label">Your name</label>
+                    <input type="text" name="" id="" placeholder="John Doe">
+                </div>
+            </div>
+            <div class="col-12 col-md-6 col-lg-4 mb-4">
+                <div class="mp-form-group">
+                    <label class="mp-form-group__label">Email address</label>
+                    <input type="email" name="" id="" placeholder="johndoe@abcwardrobe.lk">
+                </div>
+            </div>
+            <div class="col-12 col-md-6 col-lg-4 mb-4">
+                <div class="mp-form-group">
+                    <label class="mp-form-group__label">Phone number</label>
+                    <input type="tel" name="" id="" placeholder="0712345678">
+                </div>
+            </div>
+            <div class="col-12 mb-5">
+                <div class="mp-form-group">
+                    <label class="mp-form-group__label">Your message</label>
+                    <textarea name="" id="" placeholder="Write your enquiry here"></textarea>
+                </div>
+            </div>
+            <div class="col-12 col-md-6 col-lg-4 offset-md-3 offset-lg-4">
+                <button type="submit" role="button" class="mp-btn w-100">Submit form</button>
+            </div>
+        </form>
+    </div>
+</section>
 
 <include src="src/layouts/main-footer.html"></include>
