--- a/src/best-sellers.html
+++ b/src/best-sellers.html
@@ -14,18 +14,15 @@
             minus
             optio dolores labore hic soluta assumenda, impedit autem quibusdam debitis? Perspiciatis ut nobis
             quasi incidunt quidem.</h4>
-        <button class="mp-btn">Store directory</button>
+        <a href="stores.html" class="mp-btn">Store directory</a>
     </div>
 </section>
 
-<section class="stores-section">
+<section class="stores-section overflow-x-hidden">
 
     <div class="category-block">
 
         <div class="content-wrapper mt-5">
-            <div class="mobile-view-more d-flex d-xl-none justify-content-end px-4">
-                <a href="#">view more <i class="fi-sr-arrow-right ps-2"></i></a>
-            </div>
             <div class="store-block store-block--grid">
                 <div class="store-block__item">
                     <div class="store-img position-relative">
