--- a/src/index.html
+++ b/src/index.html
@@ -113,8 +113,8 @@
                 <h4 class="mb-5 pe-lg-5" data-aos="fade-right" data-aos-offset="200" data-aos-duration="1000">Don't let
                     low balance ruin your shopping experience. With mintpay, you can
                     buy what you want-when you want it.</h4>
-                <button class="mp-btn mp-btn--secondary" data-aos="fade-right" data-aos-offset="300"
-                    data-aos-duration="1000">Shop now</button>
+                <a href="stores.html" class="mp-btn mp-btn--secondary" data-aos="fade-right" data-aos-offset="300"
+                    data-aos-duration="1000">Shop now</a>
             </div>
             <div class="col-12 col-lg-6">
                 <div class="img-wrapper">
@@ -176,7 +176,7 @@
         <h4 class="mp-text-light mb-5" data-aos="zoom-in" data-aos-offset="100" data-aos-duration="1000">Convert more
             customers, multiply your sales</h4>
 
-        <a class="mp-btn" href="#" data-aos="fade-up" data-aos-offset="200" data-aos-duration="1000">Partner with us</a>
+        <a class="mp-btn" href="partner-with-us.html" data-aos="fade-up" data-aos-offset="200" data-aos-duration="1000">Partner with us</a>
     </div>
 </section>
 
