--- a/src/partner-with-us.html
+++ b/src/partner-with-us.html
@@ -78,7 +78,7 @@
             <img class="mb-5" src="assets/img/shopify.svg" alt="">
             <img class="mb-5" src="assets/img/woo-commerce.svg" alt="">
             <img class="mb-5" src="assets/img/magento.svg" alt="">
-            <img class="mb-5" src="assets/img/prestashop.svg" alt="">
+            <img src="assets/img/prestashop.svg" alt="">
         </div>
     </div>
 </section>
@@ -88,7 +88,7 @@
         <h2 class="text-light  mb-4 font-weight-semibold text-center">Write to us</h2>
         <h4 class="text-light text-center">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsum non
             voluptatum ratione eum tempore nesciunt a animi porro! Libero, doloremque.</h4>
-        <form class="mp-form row my-5" action="">
+        <form class="mp-form row mt-5" action="">
             <div class="col-12 col-lg-6 mb-4">
                 <div class="mp-form-group">
                     <label class="mp-form-group__label">Company name</label>
