--- a/src/support.html
+++ b/src/support.html
@@ -187,7 +187,7 @@
                             Will I be notified about upcoming payment dues?
                         </button>
                     </h2>
-                    <div id="collapseSix" class="accordion-collapse collapse" aria-labelledby="headingNine"
+                    <div id="collapseNine" class="accordion-collapse collapse" aria-labelledby="headingNine"
                         data-bs-parent="#q-block-three">
                         <div class="accordion-body">
                             <p>At mintpay we are committed to high standards we set ourselves to encourage responsible
