--- a/src/best-sellers.html
+++ b/src/best-sellers.html
@@ -22,7 +22,7 @@
 
     <div class="category-block">
 
-        <div class="content-wrapper mt-5">
+        <div class="content-wrapper px-3 px-sm-0 mt-5">
             <div class="store-block store-block--grid">
                 <div class="store-block__item">
                     <div class="store-img position-relative">
