Update Problem: Solution: Note:

--- a/src/stores.html
+++ b/src/stores.html
@@ -14,7 +14,7 @@
     <div class="filter-block d-flex justify-content-center px-3 px-md-5">
         <div class="filter-block__slider">
             <div>
-                <div class="filter-block__slider__item">Best sellers</div>
+                <div class="filter-block__slider__item">Featured</div>
             </div>
             <div>
                 <div class="filter-block__slider__item">Women</div>
@@ -36,7 +36,7 @@
 
     <div class="category-block">
         <div class="container">
-            <div class="category-block__title">Best Sellers</div>
+            <div class="category-block__title">Featured</div>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, ratione explicabo officiis quae minus
                 optio dolores labore hic soluta assumenda, impedit autem quibusdam debitis? Perspiciatis ut nobis
                 quasi incidunt quidem?</p>
@@ -44,9 +44,19 @@
 
         <div class="continer-fluid mt-5">
             <div class="mobile-view-more d-flex justify-content-end px-4">
-                <a href="best-sellers.html">view more <i class="fi-sr-arrow-right ps-2"></i></a>
+                <a href="featured.html">view more <i class="fi-sr-arrow-right ps-2"></i></a>
             </div>
             <div class="store-block">
+                <div class="store-block__item">
+                    <div class="store-img position-relative">
+                        <img src="assets/img/stores/thirteen31.png" alt="">
+                        <div class="store-link">
+                            <a href="https://www.thirteen31.com/" target="_blank">View store</a>
+                        </div>
+                    </div>
+                    <h5 class="store-title mt-3">SPA CEYLON</h5>
+                </div>
+
                 <div class="store-block__item">
                     <div class="store-img position-relative">
                         <img src="assets/img/stores/zigzag.jpg" alt="">
@@ -69,16 +79,6 @@
 
                 <div class="store-block__item">
                     <div class="store-img position-relative">
-                        <img src="assets/img/stores/thirteen31.png" alt="">
-                        <div class="store-link">
-                            <a href="https://www.thirteen31.com/" target="_blank">View store</a>
-                        </div>
-                    </div>
-                    <h5 class="store-title mt-3">Thirteen Thirty One</h5>
-                </div>
-
-                <div class="store-block__item">
-                    <div class="store-img position-relative">
                         <img src="assets/img/stores/stripes-checks.jpg" alt="">
                         <div class="store-link">
                             <a href="https://stripesandchecksinc.com/" target="_blank">View store</a>
@@ -97,6 +97,54 @@
                 optio dolores labore hic soluta assumenda, impedit autem quibusdam debitis? Perspiciatis ut nobis
                 quasi incidunt quidem?</p>
         </div>
+
+        <div class="continer-fluid mt-5">
+            <div class="mobile-view-more d-flex justify-content-end px-4">
+                <a href="featured.html">view more <i class="fi-sr-arrow-right ps-2"></i></a>
+            </div>
+            <div class="store-block">
+                <div class="store-block__item">
+                    <div class="store-img position-relative">
+                        <img src="assets/img/stores/zigma-jones.jpg" alt="">
+                        <div class="store-link">
+                            <a href="https://zigmajones.com/" target="_blank">View store</a>
+                        </div>
+                    </div>
+                    <h5 class="store-title mt-3">EKKO</h5>
+                </div>
+
+                <div class="store-block__item">
+                    <div class="store-img position-relative">
+                        <img src="assets/img/stores/thirteen31.png" alt="">
+                        <div class="store-link">
+                            <a href="https://www.thirteen31.com/" target="_blank">View store</a>
+                        </div>
+                    </div>
+                    <h5 class="store-title mt-3">1331</h5>
+                </div>
+
+                <div class="store-block__item">
+                    <div class="store-img position-relative">
+                        <img src="assets/img/stores/zigzag.jpg" alt="">
+                        <div class="store-link">
+                            <a href="https://www.foaclothing.com/" target="_blank">View store</a>
+                        </div>
+                    </div>
+                    <h5 class="store-title mt-3">F.O.A</h5>
+                </div>
+
+                <div class="store-block__item">
+                    <div class="store-img position-relative">
+                        <img src="assets/img/stores/stripes-checks.jpg" alt="">
+                        <div class="store-link">
+                            <a href="https://stripesandchecksinc.com/" target="_blank">View store</a>
+                        </div>
+                    </div>
+                    <h5 class="store-title mt-3">Will by Zac</h5>
+                </div>
+            </div>
+        </div>
+
     </div>
 </section>
 
